devops-08-kubernetes/kubernetes-1.5-networking-part2/src/deploy_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: networking-part2
  labels:
    app: back
spec:
  selector:
    matchLabels:
      app: back
  replicas: 1
  template:
    metadata:
      labels:
        app: back
        component: network2
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
