devops-08-kubernetes/kubernetes-1.5-networking-part2/src/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: networking-part2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontback-service
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: frontback-service
            port:
              number: 9002
